[project]
name = "mcp-server-deep-researcher"
version = "0.1.0"
description = "MCP Server for performing deep research using a LangGraph-based agent."
authors = [
    { name = "XyManchick", email = "xymanchick@xyber.inc" },
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # MCP Server Dependencies
    "mcp>=1.8.0,<2.0.0",
    "fastmcp>=2.3.4",
    "fastapi>=0.115.12",
    "uvicorn[standard]",
    "pydantic-settings>=2.0",
    
    # Deep Researcher Core Dependencies
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "tavily-python>=0.5.0",
    "langchain-ollama>=0.2.1",
    "duckduckgo-search>=7.3.0",
    "langchain-openai>=0.1.1",
    "openai>=1.12.0",
    "langchain_openai>=0.3.9",
    "httpx>=0.28.1",
    "markdownify>=0.11.0",
    "python-dotenv>=1.1.0",
    "langchain-together",
    "langchain-google-genai",
    "langchain-mistralai",
    "langchain-mcp-adapters",
    "langfuse>=2.0.0",
    # x402 Payment Dependencies
    "x402==0.2.1",
    "cdp-sdk>=1.33.2",
    "pyyaml",
    "psycopg2-binary>=2.9.9",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.23.2",
    "httpx>=0.25.0",
    "ruff>=0.1.6",
    "black>=23.11.0",
    "isort>=5.12.0",
    "aioresponses>=0.7.4", # For mocking async HTTP requests
]
debug = [
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_deepresearcher"]

# --- Tool Configurations ---

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D107", # Missing docstring in __init__
    "D203", # 1 blank line required before class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "S101", # Use of assert detected (common in tests)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "D"]  # Allow assert in tests, skip docstrings

[tool.mypy]
python_version = "3.12"
warn_unreachable = true
files = ["src/**/*.py"]
exclude = ["tests/", "__pycache__/"]
strict = true
ignore_missing_imports = true
show_error_codes = true
warn_return_any = false
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
    "-v",
    "--ignore=tests/e2e",  # Exclude e2e tests by default
    "-m", "not integration",  # Exclude integration tests by default
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
