[project]
name = "mcp-server-imgen"
version = "0.1.0"
description = "MCP image generation service using Google Vertex AI"
authors = [
    {name = "Kalmy8",email = "kalmykovalexey01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.8.0,<2.0.0",
    "pydantic-settings>=2.0",
    "uvicorn[standard]",
    "pydantic (>=2.0.0)",
    "fastmcp>=2.3.4",
    "fastapi>=0.115.12",
    "google-cloud-aiplatform (>=1.40.0)",
    "google-auth (>=2.28.0)",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "black",
    "isort",

]
debug = [
    "debugpy>=1.8.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_imgen"]
