[project]
name = "mcp-server-postgres"
version = "0.1.0"
description = "MCP Server providing tools to interact with PostgreSQL."
authors = [
    {name = "Kalmy8",email = "kalmykovalexey01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "starlette>=0.37.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "pydantic-settings>=2.0",
]


[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "black",
    "isort",

]
debug = [
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_postgres"]
