[project]
name = "mcp-server-qdrant"
version = "0.1.0"
description = "MCP Server for vector database operations using Qdrant"
authors = [
    { name = "XyAgent", email = "agent@xyber.inc" },
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.8.0,<2.0.0",
    "pydantic-settings>=2.0",
    "uvicorn[standard]",
    "fastmcp>=2.3.4",
    "fastapi>=0.115.12",
    # Qdrant-specific dependencies
    "qdrant-client>=1.7.0",
    "fastembed>=0.7.0",
]

[dependency-groups]
dev = [
    "black",
    "httpx",
    "isort",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest>=7.0.0",
    "ruff",
]
debug = [
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_qdrant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src"]
python_files = ["test_*.py", "*_test.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
