[project]
name = "mcp-server-tavily"
version = "0.1.0"
description = "MCP Server for web search using Tavily API"
authors = [
    { name = "XyAgent", email = "agent@xyber.inc" },
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "mcp>=1.8.0,<2.0.0",
    "pydantic-settings>=2.0",
    "uvicorn[standard]",
    "fastmcp>=2.3.4",
    "fastapi>=0.115.12",
    "tenacity>=8.5.0",
    # Tavily-specific dependencies
    "tavily-python>=0.2.0",
    "langchain-tavily>=0.1.0",
]


[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "black",
    "isort",
]
debug = [
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_tavily"]


# --- Tool Configurations (Optional but recommended) ---

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "W", "C90", "N", "D"]
ignore = ["D100", "D104", "D107", "D203", "D212"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
