[project]
name = "mcp-server-twitter"
version = "0.1.0"
description = "MCP Server for Twitter integration"
authors = [
    { name = "XyAgent", email = "agent@xyber.inc" },
]
readme = "README.md"
requires-python = ">=3.12"


dependencies = [
    "mcp>=1.8.0,<2.0.0",
    "pydantic-settings>=2.0",
    "uvicorn[standard]",
    "fastmcp>=2.3.4",
    "fastapi>=0.115.12",
    "tweepy>=4.14.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "async-lru>=2.0.0",
    "oauthlib>=3.2.0",
    "tenacity>=8.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "black",
    "isort",
    "pytest-cov",
    # feel free to add/edit dependencies
]
debug = [
    "debugpy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_twitter"]

[tool.coverage.run]
source = ["src"] # Tell coverage your source code is in the 'src' directory

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
    "--strict-markers",
    "--disable-warnings",
    "-v"
]
asyncio_mode = "auto"